--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,71 @@
 apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'tomcat'
 
-sourceCompatibility = 1.5
-version = '1.0'
+sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    maven {
+        url 'http://repo.spring.io/milestone'
+    }
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:1.2.4'
+    }
+}
+
+group = "noah.flavorme"
+version = "1.0"
+
+jar {
+    baseName = "flavorme-api"
 }
 
 dependencies {
+    // test
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    // spring
+    def springVersion = '4.1.0.RC2'
+    compile "org.springframework:spring-web:${springVersion}"
+    compile "org.springframework:spring-webmvc:${springVersion}"
+    compile "org.springframework:spring-tx:${springVersion}"
+    testCompile "org.springframework:spring-test:${springVersion}"
+
+    // slf4j
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.slf4j:slf4j-log4j12:1.7.7'
+    compile 'log4j:log4j:1.2.17'
+    compile 'org.slf4j:jcl-over-slf4j:1.7.7'
+
+    //JSON
+    def jacksonVersion = '2.4.1'
+    compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
+    compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+    compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    compile "com.fasterxml.jackson.module:jackson-module-jsonSchema:${jacksonVersion}"
+
+    // tomcat
+    def tomcatVersion = '7.0.11'
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
+    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
+        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
+    }
 }
+
+tomcat {
+    httpPort = 10001
+}
+
+tomcatRun.contextPath = "/"
