MongoDB 컨티그 및 간단한 테스트케이스  추가~

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,10 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>io.noah.flavorme.api.config.AppContextConfig</param-value>
+		<param-value>
+            io.noah.flavorme.api.config.AppContextConfig
+            io.noah.flavorme.api.config.MongoDbContextConfig
+        </param-value>
 	</context-param>
 
 	<listener>
