--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     compile "com.fasterxml.jackson.module:jackson-module-jsonSchema:${jacksonVersion}"
 
+    // Spring Data
+    compile 'org.springframework.data:spring-data-mongodb:1.6.0.RC1'
+
     // tomcat
     def tomcatVersion = '7.0.11'
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
