--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,19 @@ dependencies {
     compile "org.springframework:spring-tx:${springVersion}"
     testCompile "org.springframework:spring-test:${springVersion}"
 
+    // DataAccess (DB)
+    compile 'org.postgresql:postgresql:9.3-1102-jdbc41'
+//    compile 'mysql:mysql-connector-java:5.1.6'
+
+    // DataAccess (Mongo)
+    compile 'org.springframework.data:spring-data-mongodb:1.6.0.RC1'
+
+    // DataAccess (JPA)
+    compile 'org.springframework.data:spring-data-jpa:1.7.0.RC1'
+    compile 'org.hibernate:hibernate-c3p0:3.6.10.Final'
+    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final'
+    compile 'org.hibernate:hibernate-entitymanager:3.6.10.Final'
+
     // slf4j
     compile 'org.slf4j:slf4j-api:1.7.7'
     compile 'org.slf4j:slf4j-log4j12:1.7.7'
@@ -54,9 +67,6 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     compile "com.fasterxml.jackson.module:jackson-module-jsonSchema:${jacksonVersion}"
-
-    // Spring Data
-    compile 'org.springframework.data:spring-data-mongodb:1.6.0.RC1'
 
     // tomcat
     def tomcatVersion = '7.0.11'
